# pull-requests

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  MANIFEST.in  README.md  TODO  conftest.py  install.json  jest.config.js  jupyterlab-git.tgz  package.json  setup.cfg  setup.py  setupJest.js  tsconfig.json  tslint.json  webpack.config.js
.binder/: environment.yml  jupyter_config.example.json  postBuild
.github/workflows/: build.yml
jupyter-config/: jupyterlab_pullrequests.json  jupyterlab_pullrequests_server.json
jupyterlab_pullrequests/: __init__.py  _version.py  base.py  github_manager.py  handlers.py  log.py  manager.py
jupyterlab_pullrequests/managers/: __init__.py  github.py  github_anonymous.py  gitlab.py  manager.py  utils.py
jupyterlab_pullrequests/tests/: conftest.py  test_extensions.py  test_github.py  test_github_unit.py  test_gitlab.py  test_handlers_integration.py  test_manager.py  test_manager_utils.py
jupyterlab_pullrequests/tests/sample_responses/: github_comments_get.json  github_validate_pr_link.json
jupyterlab_pullrequests/tests/sample_responses/github/: github_comments_get.json  github_comments_post.json  github_pr_links.json
jupyterlab_pullrequests/tests/sample_responses/gitlab/: get_file.json  get_pr.json  get_pr_changes.json  get_pr_comments.json  get_prs.json  get_user.json  posted_new_file_comment.json  posted_new_pr_comment.json  posted_reply_file_comment.json  posted_reply_pr_comment.json
src/: declarations.d.ts  index.ts  index.tsx  json-source-map.d.ts  models.tsx  tokens.ts  utils.ts
src/components/: ActionButton.tsx  PullRequestPanel.tsx  PullRequestToolbar.tsx  Toolbar.tsx
src/components/browser/: Browser.tsx  BrowserGroup.tsx  FileItem.tsx  PullRequestBrowser.tsx  PullRequestBrowserFileItem.tsx  PullRequestBrowserItem.tsx  PullRequestBrowserWidget.tsx  PullRequestItem.tsx
src/components/diff/: CellDiff.tsx  CommentThread.ts  CommentWidget.ts  InputComment.ts  NBDiff.tsx  NotebookCellsDiff.ts  NotebookCommentDiffWidget.ts  NotebookDiff.ts  PlainDiffComponent.tsx  PullRequestCommentThread.tsx  notebook.ts  plaintext.ts
src/components/discussion/: Comment.ts  Discussion.ts  InputComment.ts
src/components/tab/: DescriptionWidget.ts  FileDiffWidget.ts  PullRequestDescriptionTab.tsx  PullRequestFileTab.tsx  PullRequestTab.tsx  PullRequestTabWidget.tsx
src/style/: icons.ts
src/tests/: Browser.spec.tsx  BrowserGroup.spec.tsx  Discussion.spec.ts  PullRequestBrowser.spec.tsx  PullRequestBrowserItem.spec.tsx  PullRequestItem.spec.tsx  samplecomment.json  samplefile.json  samplepr.json  testutils.ts
src/tests/sample-responses/: samplecomment.json  samplepr.json
src/tests/test-components/: PullRequestBrowser.spec.tsx  PullRequestBrowserItem.spec.tsx  PullRequestCommentThread.spec.tsx  PullRequestTab.spec.tsx
style/: base.css  diff.css  difftext.css  index.css
tests/: __init__.py  test_github_unit.py  test_handlers_integration.py  test_handlers_unit.py
tests/sample_responses/: github_current_user.json
tests/test-components/: PullRequestBrowserItem.spec.tsx  PullRequestCommentThread.spec.tsx
tests/test-components/sample-responses/: samplefile.json  samplepr.json
tests/test-server/: test_github_unit.py  test_handlers_integration.py
tests/test-server/sample_responses/: github_list_files.json  github_list_prs.json
tests/unit/: test_handlers.py
