[metadata]
name = jupyterlab_pullrequests
version = attr: jupyterlab_pullrequests._version.__version__
description = Pull Requests for JupyterLab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jupyterlab/pull-requests
project_urls =
    Bug Tracker     = https://github.com/jupyterlab/pull-requests/issues
    CI              = https://github.com/jupyterlab/pull-requests/actions
    Releases        = https://github.com/jupyterlab/pull-requests/releases
    Source Code     = https://github.com/jupyterlab/pull-requests
author = Jupyter Development Team
license = BSD-3-Clause
license-file = LICENSE
description-file = README.md
platforms = Linux, Mac OS X, Windows
keywords =
    Interactive
    Jupyter
    JupyterLab
    Notebook
    Web
    Git
    Version Control
    Pull Requests
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
setup_requires =
    setuptools
    wheel
install_requires =
    jupyterlab ~=2.0
    nbdime
packages = find:
include_package_data = True
zip_safe = False

[options.extras_require]
gitlab =
    diff-match-patch
test =
    %(gitlab)s
    mock>=4.0.0
    pytest-asyncio
    pytest
coverage =
    %(test)s
    codecov
    pytest-cov
dev =
    %(coverage)s
    twine
