[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
description_file = README.md
platforms = Linux, Mac OS X, Windows
keywords =
    Interactive
    Jupyter
    JupyterLab
    Notebook
    Web
    Git
    Version Control
    Pull Requests
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
python_requires = >=3.6
setup_requires =
    setuptools
    wheel
install_requires =
    entrypoints >=0.2.2
    jupyterlab ~=3.0
    jupyterlab-git >=0.30.0,<0.40.0a0
packages = find:
include_package_data = True
zip_safe = False

[options.entry_points]
jupyterlab_pullrequests.manager_v1 =
    github = jupyterlab_pullrequests:get_github_manager
    gitlab = jupyterlab_pullrequests:get_gitlab_manager [gitlab]

[options.extras_require]
gitlab =
    diff-match-patch
test =
    %(gitlab)s
    flaky
    mock>=4.0.0
    pytest
    pytest-asyncio
    pytest-tornasync
coverage =
    %(test)s
    codecov
    pytest-cov
dev =
    %(coverage)s
    twine
